--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -11357,8 +11357,9 @@ ul.widgets h3 {
 }
 
 /*Media Library*/
-.media-library-main-list-overlay p {
+.media-library-main-list-overlay {
   margin: 0;
+  display: block;
 }
 
 #media-library-main-editor ul.pageStatus {
