Fix css for button.a.active

--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -137,6 +137,7 @@ span .button {
 button:active, .button:active, a.button:active {
     background: #ee726f;
     color: #fff !important;
+    padding: 5px 11px !important;
 }
 
 button:hover, .button:hover, a.button:hover {
