Fix css for button.a.active

--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -130,6 +130,7 @@ span .button {
 button:active, .button:active, a.button:active {
   background: #ee726f;
   color: #fff !important;
+  padding: 5px 11px !important;
 }
 
 button:hover, .button:hover, a.button:hover {
@@ -11358,6 +11359,7 @@ ul.widgets h3 {
 /*Media Library*/
 .media-library-main-list-overlay p {
   margin: 0;
+  display: block;
 }
 
 #media-library-main-editor ul.pageStatus {
