--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Fields/JsonDataTable.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Fields/JsonDataTable.cshtml
@@ -68,4 +68,7 @@
             </script>
         }
     </div>
+    @if (HasText(settings.Hint)) {
+        <span class="hint">@settings.Hint</span>
+    }
 </fieldset>
