--- a/src/Modules/Laser.Orchard.StartupConfig/Styles/laser-base.css
+++ b/src/Modules/Laser.Orchard.StartupConfig/Styles/laser-base.css
@@ -23,4 +23,4 @@
   color: #DD4B39;
 }
 
-/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///D:/Laser.Orchard/Laser.Orchard/Laser.Orchard.Platform/src/Modules/Laser.Orchard.StartupConfig/Assets/laser-base.scss%22,%22file:///D:/Laser.Orchard/Laser.Orchard/Laser.Orchard.Platform/src/Modules/Laser.Orchard.StartupConfig/Assets/_colors.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAEA;EACI;EACA;EACA;EACA;;AAEA;EACI;;AAEA;EACI;;;AAKZ;EACI,OCjBI;;;ADoBR;EACI,OCpBK;;;ADuBT;EACI,OCvBE%22%7D */
+/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///D:/Rilasci/Laser.Orchard/Laser.Orchard.Platform/src/Modules/Laser.Orchard.StartupConfig/Assets/laser-base.scss%22,%22file:///D:/Rilasci/Laser.Orchard/Laser.Orchard.Platform/src/Modules/Laser.Orchard.StartupConfig/Assets/_colors.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAEA;EACI;EACA;EACA;EACA;;AAEA;EACI;;AAEA;EACI;;;AAKZ;EACI,OCjBI;;;ADoBR;EACI,OCpBK;;;ADuBT;EACI,OCvBE%22%7D */
