Code refactoring: - removed and sorted using - removed useless OrchardFeature statements

--- a/src/Modules/Laser.Orchard.Mobile/Views/EditorTemplates/Parts/PushMobileSettings_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.Mobile/Views/EditorTemplates/Parts/PushMobileSettings_Edit.cshtml
@@ -62,7 +62,7 @@
             @Html.LabelFor(m => m.ApplePathCertificateFileDevelopment, T("Apple Path Certificate File Development"))
             @Html.DropDownListFor(m => m.ApplePathCertificateFileDevelopment, Model.ListOfCertificatesDevelopment, "")
         </fieldset>
-        <fieldset>
+        @*<fieldset>
             <h2>Windows Mobile</h2>
             @Html.LabelFor(m => m.WindowsAppPackageName, T("Windows App Package Name"))
             @Html.TextBoxFor(m => m.WindowsAppPackageName)
@@ -70,7 +70,7 @@
             @Html.TextBoxFor(m => m.WindowsAppSecurityIdentifier)
             @Html.LabelFor(m => m.WindowsEndPoint, T("Windows EndPoint"))
             @Html.TextBoxFor(m => m.WindowsEndPoint)
-        </fieldset>
+        </fieldset>*@
 
         <fieldset>
             <h2>@T("Setting Backoffice")</h2>
